--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,16 @@
   height: 20%;
 }
 
+.cuadradito{
+  margin: 0;
+  padding: 0;
+  border: 1px solid #ccc;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 25px;
+}
+
 .color0{
   background-color: white;
   color: black;
@@ -11,4 +21,12 @@
 .color1{
   background-color: #333;
   color: white;
+}
+
+.comecocos {
+  width: 100%;
+  height: 100%;
+  background-image: url('./imgs/pacman.png');
+  background-size: cover;
+  background-position: center;
 }
